--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Erwin Dev</title>
+  <title>Erwin Dev Company</title>
 </head>
 
 <body id="home" class="scrollspy">
